--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^16.4.0",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
